<resources>
    <string name="app_name">SmartKit</string>

    <string name="action_settings">Settings</string>
    <!-- nav -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_message">Message</string>
    <string name="nav_device">Device</string>
    <string name="nav_timeline">Timeline</string>
    <string name="nav_air_kiss">AirKiss</string>
    <string name="nav_settings">Settings</string>
</resources>
