<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/nav_message" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_menu_storage"
            android:title="@string/nav_device"
            android:visible="false" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_menu_timeline"
            android:title="@string/nav_timeline"
            android:visible="false"/>
        <item
            android:id="@+id/nav_air_kiss"
            android:icon="@drawable/ic_menu_air_kiss"
            android:title="@string/nav_air_kiss" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>
